Fix to forked dqe with fix for forked mmath

--- a/rebar.config
+++ b/rebar.config
@@ -16,7 +16,7 @@
   fifo_utils,
   {msgpack, ".*", {git, "https://github.com/msgpack/msgpack-erlang.git", {tag, "0.3.3"}}},
   {mmath, ".*", {git, "https://github.com/dataloop/mmath.git", {branch, "decimal-floating-point-numbers"}}},
-  {dqe, ".*", {git, "https://github.com/dalmatinerdb/dqe.git", {tag, "0.1.22"}}},
+  {dqe, ".*", {git, "https://github.com/dataloop/dqe.git", {branch, "forked-mmath"}}},
   eper,
   recon
  ]}.
