Add tags filtering to metrics endpoint

--- a/rebar.config
+++ b/rebar.config
@@ -15,6 +15,10 @@
   fifo_utils,
   {msgpack, "0.3.5"},
   {dqe, "~>0.3.1"},
+  {dqe_idx, {git, "https://github.com/dalmatinerdb/dqe_idx.git", {branch,
+                                                                  "tags-filter"}}},
+  {dqe_idx_pg, {git, "https://github.com/dalmatinerdb/dqe_idx_pg.git", {branch,
+                                                                        "tags-filter"}}},
   {ejwt, "~>0.1.0"},
   {mongodb, {git, "https://github.com/comtihon/mongodb-erlang.git", {tag, "v0.9.8"}}},
   {poolboy, "~>1.5.1"},
