--- a/rebar.config
+++ b/rebar.config
@@ -21,6 +21,7 @@
   {ejwt, "~>0.1.0"},
   {mongodb, {git, "https://github.com/comtihon/mongodb-erlang.git", {tag, "v0.9.8"}}},
   {poolboy, "~>1.5.1"},
+  {pgapp, {git, "https://github.com/dalmatinerdb/pgapp.git", {branch, "kill-them-all"}}},
   base16,
   eper,
   recon
