--- a/rebar.config
+++ b/rebar.config
@@ -24,6 +24,7 @@
   {poolboy, "~>1.5.1"},
   {pgapp, {git, "https://github.com/dalmatinerdb/pgapp.git", {branch, "kill-them-all"}}},
   base16,
+  {dproto, ".*", {git, "https://github.com/dalmatinerdb/dproto.git", {branch, "master"}}},
   eper,
   recon
  ]}.
