--- a/rebar.config
+++ b/rebar.config
@@ -17,6 +17,7 @@
   fifo_utils,
   {msgpack, "0.3.5"},
   %%{dqe, "~>0.4.0"},
+  {ddb_client, ".*", {git, "https://github.com/dalmatinerdb/ddb_client.git", {branch, "master"}}},
   {dqe, ".*", {git, "https://github.com/dalmatinerdb/dqe.git", {branch, "undefined-dvar"}}},
   {dqe_idx_pg, ".*", {git, "https://github.com/dalmatinerdb/dqe_idx_pg.git", {branch, "hstore-with-all"}}},
   {ejwt, "~>0.1.0"},
