--- a/rebar.config
+++ b/rebar.config
@@ -17,7 +17,7 @@
   fifo_utils,
   {msgpack, "0.3.5"},
   %%{dqe, "~>0.4.0"},
-  {dqe, ".*", {git, "https://github.com/dalmatinerdb/dqe.git", {branch, "master"}}},
+  {dqe, ".*", {git, "https://github.com/dalmatinerdb/dqe.git", {branch, "undefined-dvar"}}},
   {dqe_idx_pg, ".*", {git, "https://github.com/dalmatinerdb/dqe_idx_pg.git", {branch, "master"}}},
   {ejwt, "~>0.1.0"},
   {mongodb, {git, "https://github.com/comtihon/mongodb-erlang.git", {tag, "v0.9.8"}}},
