--- a/rebar.config
+++ b/rebar.config
@@ -18,7 +18,7 @@
   {msgpack, "0.3.5"},
   %%{dqe, "~>0.7.5"},
   %% Outlyer dependencies
-  {dqe, ".*", {git, "https://github.com/dalmatinerdb/dqe.git", {branch, "undefined-dvar"}}},
+  {dqe, ".*", {git, "https://github.com/outlyerapp/dqe.git", {branch, "patches"}}},
   {ejwt, "~>0.1.0"},
   {mongodb, {git, "https://github.com/comtihon/mongodb-erlang.git", {tag, "v0.9.8"}}},
   {poolboy, "~>1.5.1"},
