--- a/rel/vars/deb.config
+++ b/rel/vars/deb.config
@@ -5,9 +5,11 @@
 {cuttlefish_conf,       "dfe.conf"}.
 {run_user_home,         "/var/lib/dfe"}.
 {crash_dump,            "/var/log/dfe"}.
+{log_path,              "/var/log/dfe"}.
+{db_path,               "/var/lib/dfe"}.
 
 {platform_etc_dir,      "/etc/dfe"}.
 {platform_bin_dir,      "./bin"}.
 {platform_data_dir,     "/var/lib/dfe"}.
 {platform_lib_dir,      "/usr/lib/dfe/lib"}.
-{platform_log_dir,      "/var/log/dfe"}.
+{platform_log_dir},     "/var/log/dfe"}.
