--- a/rel/vars/deb.config
+++ b/rel/vars/deb.config
@@ -12,4 +12,4 @@
 {platform_bin_dir,      "./bin"}.
 {platform_data_dir,     "/var/lib/dfe"}.
 {platform_lib_dir,      "/usr/lib/dfe/lib"}.
-{platform_log_dir},     "/var/log/dfe"}.
+{platform_log_dir,     "/var/log/dfe"}.
