--- a/rebar.config
+++ b/rebar.config
@@ -19,6 +19,7 @@
   %%{dqe, "~>0.7.5"},
   %% Outlyer dependencies
   {dqe, ".*", {git, "https://github.com/outlyerapp/dqe.git", {branch, "patches"}}},
+  {dqe_idx_pg, ".*", {git, "https://github.com/outlyerapp/dqe_idx_pg.git", {branch, "patches"}}},
   {ejwt, "~>0.1.0"},
   {mongodb, {git, "https://github.com/comtihon/mongodb-erlang.git", {tag, "v0.9.8"}}},
   {poolboy, "~>1.5.1"},
